--- a/.github/workflows/gatsby.yml
+++ b/.github/workflows/gatsby.yml
@@ -29,5 +29,12 @@ jobs:
       - name: Build
         run: yarn build
       
-    
-
+      - name: Deploy files to server
+        uses: wlixcc/SFTP-Deploy-Action@v1.0
+        with:
+          username: 'root'
+          server: '${{ secrets.SERVER_IP }}'
+          ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }} 
+          local_path: './public/*'
+          remote_path: '/www/blog/public'
+        
