--- a/.github/workflows/gatsby.yml
+++ b/.github/workflows/gatsby.yml
@@ -14,7 +14,7 @@ on:
 
 jobs:
   update:
-    runs-on: ubantu-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       
