--- a/.github/workflows/gatsby.yml
+++ b/.github/workflows/gatsby.yml
@@ -30,11 +30,11 @@ jobs:
         run: yarn build
       
       - name: Deploy files to server
-        uses: easingthemes/ssh-deploy@v2.1.5
-        env:
-          SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_KEY }}
-          SOURCE: "public/"
-          REMOTE_HOST: "${{ secrets.SERVER_IP }}"
-          REMOTE_USER: "root"
-          TARGET: "/www/blog/public"
+        uses: wlixcc/SFTP-Deploy-Action@v1.0 
+        with:  
+          username: 'root'   #ssh user name
+          server: '${{ secrets.SERVER_IP }}' #引用之前创建好的secret
+          ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }} #引用之前创建好的secret
+          local_path: './public/*'  # 对应我们项目build的文件夹路径
+          remote_path: '/www/blog/public'
         
