--- a/.github/workflows/gatsby.yml
+++ b/.github/workflows/gatsby.yml
@@ -30,11 +30,12 @@ jobs:
         run: yarn build
       
       - name: Deploy files to server
-        uses: wlixcc/SFTP-Deploy-Action@v1.0 
+        uses: garygrossgarten/github-action-scp@release
         with:  
-          username: 'root'   #ssh user name
-          server: '${{ secrets.SERVER_IP }}' #引用之前创建好的secret
-          ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }} #引用之前创建好的secret
-          local_path: './public/*'  # 对应我们项目build的文件夹路径
-          remote_path: '/www/blog/public'
+          local: 'public'
+          remote: '/www/blog'
+          host: ${{secrets.SERVER_IP}}
+          username: ${{secrets.SSH_USER}}
+          password: ${{secrets.PASSWORD}}
+          
         
