--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
     "gatsby-plugin-manifest": "^3.0.0",
     "gatsby-plugin-offline": "^4.0.0",
     "gatsby-plugin-postcss": "^4.1.0",
+    "gatsby-plugin-preact": "^5.2.0",
     "gatsby-plugin-react-helmet": "^4.0.0",
     "gatsby-plugin-sharp": "^3.0.0",
     "gatsby-plugin-tailwindcss": "^1.0.3",
+    "gatsby-plugin-zopfli": "^2.0.0",
     "gatsby-source-filesystem": "^3.0.0",
     "gatsby-transformer-remark": "^3.1.0",
     "gatsby-transformer-sharp": "^3.0.0",
     "postcss": "^8.2.8",
+    "preact": "^10.5.13",
+    "preact-render-to-string": "^5.1.18",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -27,6 +31,7 @@
     "tailwindcss": "^2.0.4"
   },
   "devDependencies": {
+    "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.21",
     "prettier": "2.2.1"
   },
   "keywords": [
