--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby-plugin-postcss": "^4.1.0",
     "gatsby-plugin-preact": "^5.2.0",
     "gatsby-plugin-react-helmet": "^4.0.0",
+    "gatsby-plugin-sass": "^4.4.0",
     "gatsby-plugin-sharp": "^3.0.0",
     "gatsby-plugin-tailwindcss": "^1.0.3",
     "gatsby-plugin-zopfli": "^2.0.0",
@@ -28,6 +29,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "sass": "^1.32.12",
     "tailwindcss": "^2.0.4"
   },
   "devDependencies": {
